dynamic bio, download button functionality, fix projects on mobile

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -11,7 +11,6 @@
 
 .projects-header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 
   align-self: center;
